# GPRT

./: .clang-format  .gitignore  .gitmodules  CITATION.cff  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  shaders.slang
docs/: CMakeLists.txt  Doxyfile.in  Makefile  make.bat  requirements.txt  sphinx.cmake
docs/source/: conf.py  deviceapi.rst  hostapi.rst  index.rst
gprt/: CMakeLists.txt  Doxyfile.in  gprt.cpp  gprt.h  gprt.hlsl  gprt.slang  gprt.slangh  gprt_builtins.slang  gprt_device.h  gprt_device.hlsli  gprt_device_code.hlsl  gprt_fallbacks.h  gprt_fallbacks.slang  gprt_host.h  gprt_hploc_build.slang  gprt_hploc_shared.h  gprt_hploc_traverse.slang  gprt_knn.h  gprt_knn.hlsl  gprt_knn.slang  gprt_knn_build.slang  gprt_knn_host.cpp  gprt_knn_query.slang  gprt_knn_shared.h  gprt_knn_traverse.slang  gprt_knn_traverse_leaf.slang  gprt_knn_traverse_node.slang  gprt_knn_traverse_unified.slang  gprt_lbvh.h  gprt_lbvh.hlsl  gprt_nnq.h  gprt_scan.hlsl  gprt_scan.slang  gprt_scan_shared.h  gprt_shared.h  gprt_sort.h  gprt_sort.hlsl  gprt_sort.slang  hilbert.h  linalg.h  (+8 more)
gprt/cmake/: CMakeLists.txt  bin2c.cmake  embed_devicecode.cmake  embed_hlsl.cmake  hlsl_embed_spirv.cmake
gprt/development/: gprt_knn_host.cpp  gprt_knn_host.h  gprt_lbvh.h  gprt_lbvh.hlsl
gprt/gprt_data/: double_cube.cpp  double_teapot.c
gprt/gprt_kernels/: CMakeLists.txt  ParallelSortCS.hlsl
gprt/math/: CMakeLists.txt  Float16.cpp  Float16.h  Macros.h  MathConstants.slangh  Matrix.h  MatrixMath.h  MatrixTypes.h  Quaternion.h  QuaternionMath.h  QuaternionTypes.h  README.md  ScalarMath.h  ScalarTypes.h  Vector.h  VectorMath.h  VectorTypes.h  cellInterpolators.slang
samples/: CMakeLists.txt
samples/cmd00-rayGenOnly/: CMakeLists.txt  deviceCode.h  deviceCode.hlsl  deviceCode.slang  hostCode.cpp
samples/cmd01-simpleTriangles/: CMakeLists.txt  deviceCode.h  deviceCode.hlsl  hostCode.cpp
samples/cmd01-singleTriangle/: CMakeLists.txt  deviceCode.h  hostCode.cpp
samples/cmd02-instances/: CMakeLists.txt  deviceCode.hlsl  hostCode.cpp
samples/cmd02-simpleAABB/: CMakeLists.txt
samples/cmd02-simpleAABBs/: CMakeLists.txt  deviceCode.h  deviceCode.hlsl  hostCode.cpp
samples/cmd03-computeOnly/: CMakeLists.txt  deviceCode.h  deviceCode.hlsl  hostCode.cpp
samples/cmd03-singleAABB/: CMakeLists.txt  deviceCode.h  hostCode.cpp
samples/cmd04-computeAABBs/: CMakeLists.txt  deviceCode.h  deviceCode.hlsl  hostCode.cpp
samples/cmd05-computeVertex/: CMakeLists.txt  hostCode.cpp
samples/cmd06-computeTransform/: CMakeLists.txt  deviceCode.hlsl  hostCode.cpp
samples/cmd07-multipleGeometry/: CMakeLists.txt  hostCode.cpp
samples/cmd07-multipleTrees/: CMakeLists.txt
samples/cmd08-multipleBLAS/: CMakeLists.txt  hostCode.cpp
samples/cmd09-multipleTLAS/: CMakeLists.txt  hostCode.cpp
samples/int00-rayGenOnly/: CMakeLists.txt  deviceCode.hlsl  hostCode.cpp
samples/int01-simpleTriangle/: CMakeLists.txt
samples/int01-simpleTriangles/: CMakeLists.txt  deviceCode.h  deviceCode.hlsl  hostCode.cpp
samples/int01-singleTriangle/: CMakeLists.txt  hostCode.cpp
samples/int02-simpleAABBs/: CMakeLists.txt  deviceCode.h  deviceCode.hlsl  hostCode.cpp
samples/int03-computeOnly/: CMakeLists.txt
samples/int03-singleAABB/: CMakeLists.txt  hostCode.cpp
samples/int04-computeAABBs/: CMakeLists.txt  deviceCode.hlsl  hostCode.cpp
samples/int05-computePrimitive/: CMakeLists.txt  deviceCode.h  deviceCode.hlsl  hostCode.cpp
samples/int05-computeSphereVertex/: hostCode.cpp
samples/int05-computeVertex/: CMakeLists.txt  deviceCode.h  hostCode.cpp
samples/int06-computeTransform/: CMakeLists.txt  deviceCode.hlsl  hostCode.cpp
samples/int07-doublePrecision/: CMakeLists.txt  deviceCode.h  deviceCode.hlsl  hostCode.cpp
samples/int07-multipleGeometry/: CMakeLists.txt  deviceCode.hlsl  hostCode.cpp
samples/int07-multipleTrees/: CMakeLists.txt  deviceCode.hlsl  hostCode.cpp
samples/int08-doublePrecision/: CMakeLists.txt  deviceCode.h  hostCode.cpp
samples/int08-multipleBLAS/: CMakeLists.txt  deviceCode.hlsl  hostCode.cpp
samples/int08-multipleTLAS/: CMakeLists.txt  deviceCode.h  deviceCode.hlsl  hostCode.cpp
samples/int09-motionBlurAABBs/: CMakeLists.txt  hostCode.cpp
samples/int09-motionBlurInstances/: CMakeLists.txt  deviceCode.h  hostCode.cpp
samples/int09-multipleTLAS/: CMakeLists.txt  hostCode.cpp
samples/int10-doublePrecision/: CMakeLists.txt  hostCode.cpp
samples/s0-rayGenPrograms/: CMakeLists.txt
samples/s00-rayGenOnly/: CMakeLists.txt  deviceCode.hlsl  deviceCode.slang  hostCode.cpp  sharedCode.h
samples/s01-singleTriangle/: CMakeLists.txt  deviceCode.hlsl  deviceCode.slang  hostCode.cpp  sharedCode.h
samples/s02-instances/: CMakeLists.txt  deviceCode.h  deviceCode.hlsl  deviceCode.slang  hostCode.cpp  sharedCode.h
samples/s03-instances/: CMakeLists.txt  deviceCode.slang  hostCode.cpp
samples/s03-lineSweptSpheres/: CMakeLists.txt  sharedCode.h
samples/s03-singleAABB/: CMakeLists.txt  deviceCode.h  deviceCode.hlsl  deviceCode.slang  hostCode.cpp  sharedCode.h
samples/s03-singleLSS/: CMakeLists.txt  deviceCode.slang  hostCode.cpp  sharedCode.h
samples/s03-someSpheres/: CMakeLists.txt  deviceCode.slang  hostCode.cpp  sharedCode.h
samples/s04-computeAABBs/: CMakeLists.txt  deviceCode.h  deviceCode.hlsl  deviceCode.slang  hostCode.cpp  sharedCode.h
samples/s05-computeVertex/: CMakeLists.txt  deviceCode.hlsl  deviceCode.slang  hostCode.cpp  sharedCode.h
samples/s06-computeTransform/: CMakeLists.txt  deviceCode.h  deviceCode.hlsl  deviceCode.slang  hostCode.cpp  sharedCode.h
samples/s07-computeInstanceLOD/: deviceCode.slang  hostCode.cpp  sharedCode.h
samples/s07-multipleGeometry/: CMakeLists.txt  deviceCode.h  deviceCode.hlsl  deviceCode.slang  hostCode.cpp  sharedCode.h
samples/s08-multipleAABBGeometry/: CMakeLists.txt  hostCode.cpp
samples/s08-multipleBLAS/: CMakeLists.txt  deviceCode.h  deviceCode.hlsl  hostCode.cpp
vkrt/: CMakeLists.txt  linalg.h  slang-cpp-types.h  vkrt.cpp  vkrt.h  vkrt_device.h  vkrt_device.hlsli  vkrt_device_code.hlsl  vkrt_host.h
(+285 files in other folders)
