# MIT License

# Copyright (c) 2022 Nathan V. Morrical

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

add_subdirectory(cmd00-rayGenOnly)
add_subdirectory(cmd01-singleTriangle)
add_subdirectory(cmd02-instances)
add_subdirectory(cmd03-singleAABB)
add_subdirectory(cmd04-computeAABBs)
add_subdirectory(cmd05-computePrimitive)
add_subdirectory(cmd06-computeTransform)
add_subdirectory(cmd07-multipleTrees)
add_subdirectory(cmd08-doublePrecision)

add_subdirectory(int00-rayGenOnly)
add_subdirectory(int01-singleTriangle)
add_subdirectory(int02-instances)
add_subdirectory(int03-singleAABB)
add_subdirectory(int04-computeAABBs)
add_subdirectory(int05-computePrimitive)
add_subdirectory(int06-computeTransforms)
add_subdirectory(int07-multipleTrees)
add_subdirectory(int08-doublePrecision)