add_subdirectory(s0-rayGenPrograms)
add_subdirectory(s1-missPrograms)
add_subdirectory(s2-hitPrograms)
add_subdirectory(s3-instancing)
add_subdirectory(s4-callablePrograms)
add_subdirectory(s5-computePrograms)
add_subdirectory(s6-textures)
add_subdirectory(s8-userInterface)
add_subdirectory(s9-differentiable)
